SkylliaOre on paper-plugin